charts/guestbook/guestbook-ui-ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: guestbook-ui
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/ingress-hostname-source: defined-hosts-only
spec:
  ingressClassName: nginx
  tls:
    - secretName: guestbook-ui
      hosts:
        - guestbook.frost.haus
  rules:
  - host: guestbook.frost.haus
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: guestbook-ui
            port:
              name: http
